Create global Exception Handling + Swagger Interface for Controller